<resources>


    <string name="app_name">TheExerciseEnablingAppForTheElderly_ThirdYearProject</string>

    <string name="weight_label">Weight:</string>
    <string-array name="weight_units">
        <item>Kilograms (kg)</item>
        <item>Pounds (lbs)</item>
    </string-array>
    <string name="select_weight_unit_prompt">Select Weight Unit</string>

    <string name="height_label">Height:</string>
    <string-array name="height_units">
        <item>Meters (m)</item>
        <item>Foot (ft)</item>
    </string-array>
    <string name="select_height_unit_prompt">Select Height Unit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hour_x">Hour x</string>
    <string name="cycle">Cycle</string>
    <string name="hike">Hike</string>
    <string name="jog">Jog</string>
    <string name="thirty_min_cardio">30 minute cardio</string>
    <string name="upper_body"> 20 minute upper body workout</string>
    <string name="walk">Walk</string>
    <string name="swim">Swim</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yoga">Yoga</string>
    <string name="yoga_for_joint_pain">15 minute yoga to ease joint pain</string>
    <string name="yoga_20_minutes">Vinyasa flow 20 minute yoga</string>
    <string name="ten_min_lunge">10 minute lunge variations</string>
    <string name="rain_desc">Looks like it is raining, how about you try one of the following exercises?</string>
    <string name="cloudyDescr">Looks like it is cloudy, how about you try one of the following exercises?</string>
    <string name="sunnyDesc">Looks like it is going to be sunny, how about you try one of these activities?</string>
    <string name="back">Back</string>
    <string name="metres">metres</string>
    <string name="calories">calories</string>
    <string name="stepper_activity">StepperActivity</string>
    <string name="calender_screen">CalenderScreen</string>
    <string name="currentSteps">0/10,000</string>
    <string name="caloriesNum">0 calories</string>
    <string name="distanceNum">0 metres</string>
    <string name="personalBest">Personal Best Step Score:</string>
    <string name="stepsLeft">You have # steps left.</string>
    <string name="confirm">Confirm</string>
    <string-array name="default_exercises">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="choose_activity">Choose activity:</string>
    <string name="hour_choose">Schedule Time (Hour):</string>
    <string name="minute_choose">Schedule Time (Minute):</string>
    <string name="ideal_steps">/10,000</string>
</resources>