<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sunnyFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollViewSunny"
        android:contentDescription="sunny scroll view"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton

                    android:id="@+id/sunnyactivity1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:layout_weight="1"
                    android:background="#8FE8B6"
                    android:text="@string/cycle"
                    android:textColor="#454545"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/activity2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:background="#8FE8B6"
                    android:text="@string/hike"
                    android:textColor="#454545"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/activity3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:background="#FFB8C9"
                    android:text="@string/swim"
                    android:textColor="#454545"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/activity4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:background="#FF8FE8B6"
                    android:text="@string/walk"
                    android:textColor="#454545"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/activity5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="2dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:background="#DA8086F6"
                    android:text="@string/upper_body"
                    android:textColor="#454545"

                    android:textSize="20sp" />
            </RadioGroup>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>